<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainMenu.addWord.AddWord">

    <TextView
        android:id="@+id/changeLanguagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/addNewWord"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/newWordTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/hintWord1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeLanguagesTextView" />

    <EditText
        android:id="@+id/word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/meaningTextView"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word1" />

    <TextView
        android:id="@+id/newWordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="17dp"
        android:text="@string/newWordTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/word1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeLanguagesTextView"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/meaningTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="17dp"
        android:text="@string/meaningTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/word2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word1"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/typeOfSpeech_spinner"
        android:layout_width="155dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="insertWord"
        android:text="@string/submitButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="132dp"
        android:text="@string/typeOfSpeechTextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word2" />

</androidx.constraintlayout.widget.ConstraintLayout>