<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wordCard"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    android:padding="4dp"
    app:cardBackgroundColor="@color/colorAccent"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/wordOriginalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/wordOriginal"
            android:textAlignment="center"
            android:textColor="#FBE7E7"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeOfSpeechTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/typeOfSpeech"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBottom_toTopOf="@+id/wordTranslationTextView"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/wordOriginalTextView" />

        <TextView
            android:id="@+id/wordTranslationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/wordTranslation"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/deleteWord"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginEnd="4dp"
            android:background="#FFFFFF"
            android:backgroundTint="@color/accent2"
            android:contentDescription="@string/delete_word_button_description"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>