<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scaleType="centerCrop"
    tools:context=".mainMenu.MainMenu">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="110dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/vocapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addWord_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/accent1"
        android:text="@string/addWord"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/seeList_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent2"
        android:text="@string/seeList"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWord_button" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/accent1"
        android:text="@string/test"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seeList_button" />

    <Button
        android:id="@+id/changeLanguages_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent2"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_button" />

</androidx.constraintlayout.widget.ConstraintLayout>