<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startup.IntroductionActivity">

    <TextView
        android:id="@+id/provideLanguagesTextVIew"
        android:layout_width="312dp"
        android:layout_height="99dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/provideLanguagesTextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="333dp"
        android:layout_height="200dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="61dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <EditText
        android:id="@+id/firstLanguageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/nativeLanguage"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/provideLanguagesTextVIew" />

    <EditText
        android:id="@+id/secondLanguageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/newLanguage"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/firstLanguageEditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="62dp"
        android:text="1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provideLanguagesTextVIew" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text="2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/submitLanguagesButton"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/accent2"
        android:text="@string/submitButton"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLanguageEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>